# vagrantp

./: .envrc  .gitignore  .gitlint  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.opencode/command/: speckit.plan.md
.specify/memory/: constitution.md
ansible/: bootstrap.yml  site.yml
ansible/roles/base/tasks/: main.yml
examples/: README.md  development-env.yml  multi-distro.yml  simple-service.yml  user-management-vars.yml  user-management.yml
githooks/: prepare-commit-msg
scripts/: rewrite_commit_msg.py
specs/001-template-driven-infra/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-template-driven-infra/checklists/: requirements.md
specs/001-template-driven-infra/contracts/: cli-api.md
src/cli/: main.py
src/config/: parser.py
src/podman/: container_manager.py
src/provision/: ansible.py
src/utils/: helpers.py
src/vagrant/: vm_manager.py
templates/: container.erb  vm.erb
tests/fixtures/: sample.env
tests/integration/: test_container_lifecycle.py  test_vm_lifecycle.py
tests/unit/: test_ansible.py  test_config_parser.py  test_container_manager.py  test_vm_manager.py
